moved design patterns to common directory